--- a/UrlShortener/pom.xml
+++ b/UrlShortener/pom.xml
@@ -55,6 +55,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.24.2</version> <!-- Ensure compatibility -->
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
